--- a/leocdp-metadata.properties
+++ b/leocdp-metadata.properties
@@ -1,4 +1,5 @@
-##### Powered by USPA TECHNOLOGY at https://uspa.tech #####
+
+##### ##### ##### Powered by USPA TECHNOLOGY at https://uspa.tech ##### ##### #####
 
 ##### BUILD for RELEASE #####
 runtimeEnvironment=DEV
@@ -16,12 +17,12 @@ httpStaticDomain=cdn.jsdelivr.net/gh/USPA-Technology/leo-cdp-static-files@latest
 ##### LEO CDP METADATA #####
 productType=CDP
 superAdminEmail=
-buildEdition=
-buildVersion=
+buildEdition=EDU
+buildVersion=v_0.20210815-23h
 
 ##### LEO CDP License Metadata #####
 leoCdpLicenseKey=
-leoCdpLicenseQuota=
+leoCdpLicenseQuota=500
 
 ##### runtime path to get configs #####
 runtimePath=.
@@ -37,3 +38,5 @@ mainDatabaseConfig=localCdpDbConfigs
 
 ##### global system configs #####
 profileMergeStrategy=automation
+
+##### ##### ##### ##### ##### ##### ##### ##### ##### ##### ##### ##### ##### ##### #####
