--- a/leocdp-metadata.properties
+++ b/leocdp-metadata.properties
@@ -2,11 +2,21 @@
 ##### ##### ##### Powered by USPA TECHNOLOGY at https://uspa.tech ##### ##### #####
 
 ##### BUILD for RELEASE #####
-runtimeEnvironment=DEV
+runtimeEnvironment=PRO
 minifySuffix=-min
 
 ##### Admin Dashboard #####
 httpAdminDomain=
+
+##### LEO CDP METADATA #####
+productType=CDP
+superAdminEmail=
+buildEdition=PRO
+buildVersion=v_0.20210815-23h
+
+##### LEO CDP License Metadata #####
+leoCdpLicenseKey=
+leoCdpLicenseQuota=
 
 ##### Data Hub for Event Observer and Reactor #####
 httpObserverDomain=
@@ -14,19 +24,9 @@ httpObserverDomain=
 ##### CDN for static file #####
 httpStaticDomain=cdn.jsdelivr.net/gh/USPA-Technology/leo-cdp-static-files@latest
 
-##### LEO CDP METADATA #####
-productType=CDP
-superAdminEmail=
-buildEdition=EDU
-buildVersion=v_0.20210815-23h
-
-##### LEO CDP License Metadata #####
-leoCdpLicenseKey=
-leoCdpLicenseQuota=500
-
 ##### runtime path to get configs #####
 runtimePath=.
-pathMaxmindDatabaseFile=
+pathMaxmindDatabaseFile=data/GeoIP2-City-Asia-Pacific.mmdb
 ipStackApiAccessKey=
 
 ##### default HTTP routers #####
