--- a/resources/data-for-new-setup/init-connector-configs.json
+++ b/resources/data-for-new-setup/init-connector-configs.json
@@ -4,7 +4,7 @@
 		"name": "SendInBlue Email Marketing Automation",
 		"description": "Email Marketing Automation",
 		"builtInConnector": true,
-		"forMarketingActivation": true,
+		"forSegmentDataActivation": true,
 		"dataSynchService": true,
 		"emailSenderService": true,
 		"periodInSecondsToLoop": 30,
@@ -20,7 +20,7 @@
 		"name": "MailChimp Email Marketing Automation",
 		"description": "Email Marketing Automation",
 		"builtInConnector": true,
-		"forMarketingActivation": true,
+		"forSegmentDataActivation": true,
 		"dataSynchService": true,
 		"emailSenderService": true,
 		"periodInSecondsToLoop": 30,
@@ -32,13 +32,28 @@
 		"serviceUri": "javaclass:leotech.cdp.job.connector.MailchimpConnector"
 	},
 	{
+		"id": "onesignal",
+		"name": "OneSignal Data Connector",
+		"description": "Data Connector to push notification directly to web user",
+		"builtInConnector": true,
+		"forSegmentDataActivation": true,
+		"dataSynchService": true,
+		"messagePusherService": true,
+		"periodInSecondsToLoop": 30,
+		"configs": {
+			"service_provider": "LEO CDP",
+			"service_api_url": "https://app.onesignal.com/",
+			"service_api_key": ""
+		},
+		"serviceUri": "javaclass:leotech.cdp.job.connector.OneSignalDataConnector"
+	},
+	{
 		"id": "database_report",
 		"name": "Database Report Connector",
 		"description": "Data Report Connector for MySQL, PostgreSQL and BigQuery",
 		"builtInConnector": true,
-		"forMarketingActivation": false,
+		"forSegmentDataActivation": true,
 		"dataSynchService": true,
-		"emailSenderService": false,
 		"periodInSecondsToLoop": 30,
 		"configs": {
 			"service_provider": "LEO CDP",
@@ -49,18 +64,17 @@
 	},
 	{
 		"id": "facebook",
-		"name": "Facebook Data Connector",
+		"name": "Synch Facebook Data Connector",
 		"description": "Data Connector to synch contact profiles into Facebook Custom Audience",
-		"builtInConnector": true,
-		"forMarketingActivation": true,
+		"builtInConnector": false,
+		"forSegmentDataActivation": true,
 		"dataSynchService": true,
-		"emailSenderService": false,
 		"periodInSecondsToLoop": 30,
 		"configs": {
-			"service_provider": "LEO CDP",
+			"service_provider": "",
 			"service_api_url": "",
 			"service_api_key": ""
 		},
-		"serviceUri": "javaclass:leotech.cdp.job.connector.FacebookDataConnector"
+		"serviceUri": "javaclass:leotech.cdp.job.connector.SynchDataConnector"
 	}
 ]
