devscript and gitignore

--- a/devops-script/kafka-docker-production/config.env
+++ b/devops-script/kafka-docker-production/config.env
@@ -1,2 +1,2 @@
-DOCKER_HOST_IP=  //current server's public IP
-DOCKER_ALTERNATE_HOST_IP= //alternate server's public IP
+DOCKER_HOST_IP=
+ZOOKEEPER_IP=
