--- a/devops-script/kafka-docker-production/kafka-broker-2.yml
+++ b/devops-script/kafka-docker-production/kafka-broker-2.yml
@@ -9,7 +9,7 @@ kafka3:
       KAFKA_ADVERTISED_LISTENERS: LISTENER_DOCKER_INTERNAL://kafka3:19093,LISTENER_DOCKER_EXTERNAL://${DOCKER_HOST_IP:-127.0.0.1}:1003
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: LISTENER_DOCKER_INTERNAL:PLAINTEXT,LISTENER_DOCKER_EXTERNAL:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: LISTENER_DOCKER_EXTERNAL
-      KAFKA_ZOOKEEPER_CONNECT: ${DOCKER_HOST_IP:-127.0.0.1}:2181
+      KAFKA_ZOOKEEPER_CONNECT: ${ZOOKEEPER_IP:-127.0.0.1}:2181
       KAFKA_BROKER_ID: 3
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
     volumes:
@@ -26,7 +26,7 @@ kafka4:
       KAFKA_ADVERTISED_LISTENERS: LISTENER_DOCKER_INTERNAL://kafka4:19094,LISTENER_DOCKER_EXTERNAL://${DOCKER_HOST_IP:-127.0.0.1}:1004
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: LISTENER_DOCKER_INTERNAL:PLAINTEXT,LISTENER_DOCKER_EXTERNAL:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: LISTENER_DOCKER_EXTERNAL
-      KAFKA_ZOOKEEPER_CONNECT: ${DOCKER_HOST_IP:-127.0.0.1}:2181
+      KAFKA_ZOOKEEPER_CONNECT: ${ZOOKEEPER_IP:-127.0.0.1}:2181
       KAFKA_BROKER_ID: 4
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
     volumes:
