update and fix bugs

--- a/devops-script/docker-arangodb/docker-compose.yml
+++ b/devops-script/docker-arangodb/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3.7'
 services:
   arangodb_db_container:
     image: arangodb:latest
+    restart: unless-stopped
     container_name: arangodb
     environment:
       ARANGO_ROOT_PASSWORD: FormulaLeo#2020
