--- a/devops-script/kafka-docker-production/kafka-broker-3.yml
+++ b/devops-script/kafka-docker-production/kafka-broker-3.yml
@@ -11,9 +11,11 @@ services:
       KAFKA_ADVERTISED_LISTENERS: LISTENER_DOCKER_INTERNAL://kafka5:19095,LISTENER_DOCKER_EXTERNAL://${DOCKER_HOST_IP:-127.0.0.1}:1005
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: LISTENER_DOCKER_INTERNAL:PLAINTEXT,LISTENER_DOCKER_EXTERNAL:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: LISTENER_DOCKER_EXTERNAL
-      KAFKA_ZOOKEEPER_CONNECT: ${ZOOKEEPER_IP:-127.0.0.1}:2181
+      KAFKA_ZOOKEEPER_CONNECT: ${ZOOKEEPER1_IP:-127.0.0.1}:2181,${ZOOKEEPER2_IP:-127.0.0.1}:2182,${ZOOKEEPER3_IP:-127.0.0.1}:2183
       KAFKA_BROKER_ID: 5
-      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1      
+      KAFKA_NUM_PARTITIONS: 3
+      KAFKA_DEFAULT_REPLICATION_FACTOR: 2
     volumes:
       - ./data/kafka3/data:/var/lib/kafka/data
 
@@ -28,8 +30,10 @@ services:
       KAFKA_ADVERTISED_LISTENERS: LISTENER_DOCKER_INTERNAL://kafka6:19096,LISTENER_DOCKER_EXTERNAL://${DOCKER_HOST_IP:-127.0.0.1}:1006
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: LISTENER_DOCKER_INTERNAL:PLAINTEXT,LISTENER_DOCKER_EXTERNAL:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: LISTENER_DOCKER_EXTERNAL
-      KAFKA_ZOOKEEPER_CONNECT: ${ZOOKEEPER_IP:-127.0.0.1}:2181
+      KAFKA_ZOOKEEPER_CONNECT: ${ZOOKEEPER1_IP:-127.0.0.1}:2181,${ZOOKEEPER2_IP:-127.0.0.1}:2182,${ZOOKEEPER3_IP:-127.0.0.1}:2183
       KAFKA_BROKER_ID: 6
-      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1      
+      KAFKA_NUM_PARTITIONS: 3
+      KAFKA_DEFAULT_REPLICATION_FACTOR: 2
     volumes:
       - ./data/kafka4/data:/var/lib/kafka/data
