--- a/devops-script/docker-kafka/kafka-cluster.yml
+++ b/devops-script/docker-kafka/kafka-cluster.yml
@@ -31,6 +31,8 @@ services:
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT      
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_NUM_PARTITIONS: 3
+      KAFKA_DEFAULT_REPLICATION_FACTOR: 2
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ${KAFKA_DATA}/501:/kafka
@@ -54,6 +56,11 @@ services:
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT      
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_NUM_PARTITIONS: 3
+      KAFKA_DEFAULT_REPLICATION_FACTOR: 2
+      KAFKA_AUTO_CREATE_TOPICS_ENABLE: 'true'
+      KAFKA_DELETE_TOPIC_ENABLE: 'true'
+      KAFKA_CREATE_TOPICS: LeoCdpEvent:2:1, LeoCdpProfile:2:1
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ${KAFKA_DATA}/502:/kafka
@@ -62,3 +69,16 @@ services:
     depends_on:
       - zookeeper2  
       - kafka1
+
+  kafdrop_cluster:
+    image: obsidiandynamics/kafdrop:latest
+    container_name: kafdrop_cluster
+    restart: "no"
+    ports:
+      - "9000:9000"
+    depends_on:
+      - kafka1  
+      - kafka2
+    environment:
+      KAFKA_BROKERCONNECT: "kafka1:19091,kafka2:19092"
+      JVM_OPTS: "-Xms16M -Xmx48M -Xss180K -XX:-TieredCompilation -XX:+UseStringDeduplication -noverify"
