--- a/devops-script/kafka-docker-production/zookeeper-1.yml
+++ b/devops-script/kafka-docker-production/zookeeper-1.yml
@@ -5,11 +5,11 @@ services:
     hostname: zookeeper1
     container_name: zookeeper1
     ports:
-      - "${ZOOKEEPER_IP:-127.0.0.1}:2181:2181"
+      - "${ZOOKEEPER1_IP:-127.0.0.1}:2181:2181"
     environment:
       ZOO_MY_ID: 1
       ZOO_PORT: 2181
-      ZOO_SERVERS: server.1=${ZOOKEEPER_IP:-127.0.0.1}:2888:3888
+      ZOO_SERVERS: server.1=${ZOOKEEPER1_IP:-127.0.0.1}:2888:3888
     volumes:
       - ./data/zookeeper1/data:/data
       - ./data/zookeeper1/datalog:/datalog
