--- a/devops-script/kafka-docker-production/kafka-broker-2.yml
+++ b/devops-script/kafka-docker-production/kafka-broker-2.yml
@@ -14,8 +14,9 @@ services:
       KAFKA_ZOOKEEPER_CONNECT: ${ZOOKEEPER1_IP:-127.0.0.1}:2181,${ZOOKEEPER2_IP:-127.0.0.1}:2182,${ZOOKEEPER3_IP:-127.0.0.1}:2183
       KAFKA_BROKER_ID: 3
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1      
-      KAFKA_NUM_PARTITIONS: 3
+      KAFKA_NUM_PARTITIONS: 4
       KAFKA_DEFAULT_REPLICATION_FACTOR: 2
+      KAFKA_LOG_RETENTION_HOURS: 720
     volumes:
       - ./data/kafka3/data:/var/lib/kafka/data
 
@@ -33,7 +34,8 @@ services:
       KAFKA_ZOOKEEPER_CONNECT: ${ZOOKEEPER1_IP:-127.0.0.1}:2181,${ZOOKEEPER2_IP:-127.0.0.1}:2182,${ZOOKEEPER3_IP:-127.0.0.1}:2183
       KAFKA_BROKER_ID: 4
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1      
-      KAFKA_NUM_PARTITIONS: 3
+      KAFKA_NUM_PARTITIONS: 4
       KAFKA_DEFAULT_REPLICATION_FACTOR: 2
+      KAFKA_LOG_RETENTION_HOURS: 720
     volumes:
       - ./data/kafka4/data:/var/lib/kafka/data
