--- a/configs/redis-configs.json
+++ b/configs/redis-configs.json
@@ -1,31 +1,31 @@
 {
 	"clusterInfoRedis": [
 		{
-			"host": "leocdp.redis",
+			"host": "cdp-admin.redis",
 			"port": 6379
 		}
 	],
 	"realtimeDataStats": [
 		{
-			"host": "leocdp.redis",
+			"host": "cdp-admin.redis",
 			"port": 6379
 		}
 	],
 	"localCache": [
 		{
-			"host": "leocdp.redis",
+			"host": "cdp-admin.redis",
 			"port": 6379
 		}
 	],
 	"masterCache": [
 		{
-			"host": "leocdp.redis",
+			"host": "cdp-admin.redis",
 			"port": 6379
 		}
 	],
 	"pubSubQueue": [
 		{
-			"host": "leocdp.redis",
+			"host": "cdp-admin.redis",
 			"port": 6379
 		}
 	]
