update default template of leocdp metadata

--- a/default-leocdp-metadata.properties
+++ b/default-leocdp-metadata.properties
@@ -1,43 +1,74 @@
+############################## METADATA for LEO CDP ##############################
 
-##### ##### ##### Powered by USPA TECHNOLOGY at https://uspa.tech ##### ##### #####
-
-##### BUILD for RELEASE #####
+##### ##### ##### BUILD for RELEASE ##### ##### #####
 runtimeEnvironment=PRO
-minifySuffix=-min
-
-##### Admin Dashboard #####
-httpAdminDomain=
-
-##### LEO CDP METADATA #####
-productType=CDP
+minifySuffix=
 superAdminEmail=
 buildEdition=PRO
-buildVersion=v_0.20210815-23h
+buildVersion=v_0.9.0
 
-##### LEO CDP License Metadata #####
-leoCdpLicenseKey=
-leoCdpLicenseQuota=
+##### ##### ##### Default Leo CDP database for free and pro version ##### ##### #####
+mainDatabaseConfig=localCdpDbConfigs
+systemDatabaseConfig=localSystemDbConfigs
 
-##### Data Hub for Event Observer and Reactor #####
-httpObserverDomain=
+##### ##### ##### Admin Dashboard ##### ##### #####
+httpAdminDomain=leocdp.example.com
+adminLogoUrl=https://gcore.jsdelivr.net/gh/USPA-Technology/leo-cdp-static-files@v0.8.9.29/images/cdp4dataism.png
 
-##### CDN for static file #####
-httpStaticDomain=cdn.jsdelivr.net/gh/USPA-Technology/leo-cdp-static-files@latest
+##### ##### ##### Data Hub for Data Observer ##### ##### ##### #####
+httpObserverDomain=obs.example.com
 
-##### runtime path to get configs #####
+##### ##### ##### LEO Bot for FAQ and Content Creator ##### ##### ##### #####
+httpLeoBotDomain=leobot.example.com
+
+##### ##### ##### CDN for static file ##### ##### #####
+httpStaticDomain=leocdp.example.com/public
+httpUploadedFileDomain=static.example.com
+
+##### ##### ##### jupyter notebook to  ##### ##### #####
+httpJupyterNotebookDomain=leonotebook.example.com
+
+##### ##### ##### LEO CDP License Metadata ##### ##### #####
+leoCdpLicenseKey=free_for_dataism
+leoCdpLicenseQuota=5000000
+hasB2Bfeatures=true
+
+##### ##### ##### LEO CDP METADATA ##### ##### #####
+# COMMERCE, FINANCE, MEDIA, SERVICE
+industryDataModels=COMMERCE, FINANCE, MEDIA, SERVICE
+productType=CDP
+
+##### ##### ##### Runtime path to get configs ##### ##### #####
 runtimePath=.
 pathMaxmindDatabaseFile=data/GeoIP2-City-Asia-Pacific.mmdb
-ipStackApiAccessKey=
 
-##### default HTTP routers #####
+##### ##### ##### Default HTTP routers ##### ##### #####
 httpRoutingConfigAdmin=localLeoMainAdminWorker
 httpRoutingConfigObserver=localLeoObserverWorker
-
-#####  default Leo CDP database for free and pro version #####
-mainDatabaseConfig=localCdpDbConfigs
-
-##### global system configs #####
+;p
+##### ##### ##### Global system configs ##### ##### #####
 profileMergeStrategy=automation
-messageQueueType=redis
+messageQueueType=local
 enableCachingViewTemplates=false
-##### ##### ##### ##### ##### ##### ##### ##### ##### ##### ##### ##### ##### ##### #####
+
+##### ##### ##### kafka configs ##### ##### #####
+kafkaBootstrapServer=localhost:9092
+kafkaTopicEvent=LeoCdpEvent
+kafkaTopicEventPartitions=2
+kafkaTopicProfile=LeoCdpProfile
+kafkaTopicProfilePartitions=2
+
+##### ##### ##### update shell script ##### ##### #####
+updateShellScriptPath=
+updateLeoSystemSecretKey=
+
+##### ##### ##### MAIL SERVER for SYSTEM ADMIN ##### ##### #####
+systemEmailServer=localhost
+systemEmailPort=25
+systemEmailUseTls=false
+systemEmailUseSsl=false
+systemEmailUsername=
+systemEmailPassword=
+systemEmailDefaultSender=
+
+##########################################################################################
