--- a/leocdp-metadata.properties
+++ b/leocdp-metadata.properties
@@ -37,7 +37,7 @@ productType=CDP
 ##### ##### ##### Runtime path to get configs ##### ##### #####
 runtimePath=.
 pathMaxmindDatabaseFile=data/GeoIP2-City-Asia-Pacific.mmdb
-ipStackApiAccessKey=7f403f34544eaa67d20e44dc3c4e8a18
+ipStackApiAccessKey=
 
 ##### ##### ##### Default HTTP routers ##### ##### #####
 httpRoutingConfigAdmin=localLeoMainAdminWorker
